--- a/Client/src/components/Input/Input.module.css
+++ b/Client/src/components/Input/Input.module.css
@@ -1,14 +1,3 @@
-.formBody {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-around; */
-    direction: rtl;
-    font-size: 14px;
-    font-weight: 500;
-    width: 100%;
-    gap: var(--primary-gap);
-}
-
 .section {
     display: flex;
     flex-direction: column;
@@ -21,7 +10,7 @@
     display: flex;
     height: 56px;
     padding: 8px 24px;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     align-self: stretch;
     border-radius: 12px;
@@ -30,5 +19,20 @@
     background: var(--Trinty, #F0F0F0);
     font-family: Cairo;
     font-weight: 600;
+    width: 100%;
+    position: relative;
+}
 
+.password {
+    display:flex;
+    position: relative;
+    
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    position:absolute;
+    height: 100%;
+    left: 20px;
 }
