--- a/Client/src/components/lnading_page/8_FAQ/FAQ.module.css
+++ b/Client/src/components/lnading_page/8_FAQ/FAQ.module.css
@@ -13,10 +13,11 @@
     width: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     text-align: right;
     gap: 32px;
+
 }
 
 .button{
