--- a/Client/src/app/[locale]/(thePlatform)/Teacher/Courses/[courseID]/page.module.css
+++ b/Client/src/app/[locale]/(thePlatform)/Teacher/Courses/[courseID]/page.module.css
@@ -5,5 +5,5 @@
     /* justify-content: flex-start; */
     align-self: center;
     gap: 24px 16px;
-    padding: 0 14px;
+    /* padding: 0 14px; */
 }
