--- a/Client/src/components/(platform)/SingleCourse/Posts/Posts.module.css
+++ b/Client/src/components/(platform)/SingleCourse/Posts/Posts.module.css
@@ -27,6 +27,7 @@
     border-radius: 16px;
     background: var(--backgrounds-card-bg);
     color: var(--text-title-text);
+    transition: all 0.3s ease-in-out;
 }
 
 .user {
@@ -66,7 +67,6 @@
 .inputForm {
     display: flex;
     height: 59px;
-    padding-right: 42px;
     align-items: center;
     gap: 14px;
     align-self: stretch;
@@ -75,6 +75,7 @@
 
 .input {
     display: flex;
+    justify-content: flex-start;
     padding: 0px 18px;
     border: none;
     height: 100%;
@@ -85,7 +86,7 @@
     align-self: stretch;
     background: var(--backgrounds-reply-card-bg);
     border-radius: 12px;
-    position: relative;
+    transition: all 0.3s ease-in-out;
 
     &:focus {
         outline: none;
@@ -93,11 +94,13 @@
 }
 
 .submitPost {
-    background: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background: var(--backgrounds-reply-card-bg); */
     border: none;
-    height: 24px;
-    position: absolute;
-    left: 52px;
+    height: 100%;
+    /* width: 100%; */
     cursor: pointer;
 }
 
@@ -108,6 +111,9 @@
     gap: 16px;
     width: 100%;
     padding: 0 14px;
+}
+.post {
+    display: flex;;
 
 }
 
@@ -121,6 +127,7 @@
     border-radius: 16px;
     background: var(--backgrounds-card-bg);
     color: var(--text-title-text);
+    transition: all 0.3s ease-in-out;
 }
 
 .numLikesComments {
@@ -168,7 +175,6 @@
     &:hover {
         background: var(--backgrounds-active-pagination-bg-hover);
     }
-
 }
 
 
@@ -177,4 +183,28 @@
     width: 100%;
     height: 1px;
     border: none;
+}
+
+
+/* comments styling */
+.commentsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 100%;
+    padding: 0 14px;
+}
+
+.comments {
+    display: none;
+    flex-direction: column;
+    gap: 16px;
+    width: 100%;
+    height: 100%;
+    padding: 0 14px;
+
+    &:hover {
+        display: flex;
+    }
+
 }
